Bug 303870 - Ctrl+Backspace is a bad shortcut for "go to filesystem root" action
Summary: Ctrl+Backspace is a bad shortcut for "go to filesystem root" action
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: shortcuts (other bugs)
Version First Reported In: 2.4.0-beta3 "Single Step"
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2012-07-20 22:53 UTC by Andrey Matveyakin
Modified: 2018-05-06 00:15 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey Matveyakin 2012-07-20 22:53:23 UTC
Ctrl+Backspace is a standard shortcut for deleting a word to the left from the cursor.
But when you are renaming a file (pressing F9, not via "Move" dialog) and try to delete the last word Krusader suddenly switches current directory to "/", that is undesirable.
I can certainly change the shortcut myself, but I don't think I'm the only one who uses Ctrl+... combinations to work with words instead of characters, so it seems to me the default shortcut should be changed.
I can propose Alt+Backspace for example.
Or, alternatively, the shortcut may be disabled while renaming is active.

Reproducible: Always

Steps to Reproduce:
1. Open any directory other than "/"
2. Select any file
3. Press F9
3. Press Right arrow (to discard selection)
4. Press Ctrl+Backspace
Actual Results:  
Current folder is switched to "/", file name remain unchanged.

Expected Results:  
Last word should have been removed from the file name (editing certainly should not stop after that).
Comment 1 Chocimier 2016-12-12 09:27:44 UTC
Still happens. That is a specimen of https://bugreports.qt.io/browse/QTBUG-56632
Comment 2 Unknown 2016-12-12 16:15:49 UTC
Git commit a108a2837ad0902bdcc592a2a3d18af1edd42fbf by Alexander Bikadorov.
Committed on 12/12/2016 at 16:15.
Pushed by abikadorov into branch 'master'.

Panel: Fix unwanted opening of root dir triggered by global shortcut (control + backspace) when editing view item

M  +3    -1    krusader/Panel/krviewitemdelegate.cpp

https://commits.kde.org/krusader/a108a2837ad0902bdcc592a2a3d18af1edd42fbf
Comment 3 Alex Bikadorov 2016-12-12 16:20:19 UTC
Fixed. Defining the behaviour of "global shortcut" vs. "key event for focused widget" belongs to the application and has nothing to do with the UI framework.

How can the framework know what the application wants to do? So, I predict your Qt bug report is invalid.

But thanks anyway!
Comment 4 Chocimier 2016-12-12 20:23:28 UTC
(In reply to Alex Bikadorov from comment #3)
> Fixed. 
Thanks!

> Defining the behaviour of "global shortcut" vs. "key event for
> focused widget" belongs to the application and has nothing to do with the UI
> framework.
> 
> How can the framework know what the application wants to do? So, I predict
> your Qt bug report is invalid.
Well, alt + ← for go to next word (widget)/go back (global) works well without such definition.