Panel: Fix unwanted opening of root dir triggered by global shortcut (control + backspace) when editing view item

BUG: 303870